<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgShield"
        android:layout_width="@dimen/padding200"
        android:layout_height="@dimen/padding200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/vpn_shield" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding80"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/app_name"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize16"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding10"
        android:layout_marginTop="@dimen/padding70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <TextView
        android:id="@+id/txtSwitchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding30"
        android:text="@string/strSwitchDark"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/darkModeOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding10"
        android:thumbTint="@drawable/switch_thumb"
        android:trackTint="@drawable/switch_track"
        app:layout_constraintStart_toStartOf="@id/txtSwitchTitle"
        app:layout_constraintTop_toBottomOf="@id/txtSwitchTitle" />


    <TextView
        android:id="@+id/txtVersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding10"
        android:text="@string/version"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

